# battery_info

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  battery_info_android.cpp
android/src/main/java/com/example/battery_info_ffi/: BatteryInfoFfiPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/battery_info_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: battery_info_ffi.podspec
ios/Classes/: battery_info_ffi_plugins.h  battery_info_ffi_plugins.m  battery_info_ios.h  battery_info_ios.m
lib/: battery_info_ffi.dart  battery_info_ffi_bindings_generated.dart
lib/src/: battery_info_android.dart  battery_info_ios.dart  bindings.dart
